crates/freeflow-cli/tests/snapshots/cli_integration__fec_help_is_a_stable_interface_contract.snap
---
source: crates/freeflow-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Fichier des Écritures Comptables (FEC) d'un exercice, pour l'expert-comptable

Usage: freeflow fec [OPTIONS] <COMMAND>

Commands:
  export  Écrit le Fichier des Écritures Comptables (art. A. 47 A-1 LPF) de l'exercice clos dans l'année civile PERIOD, dérivé des factures, avoirs, encaissements et dépenses — nommé `<SIREN>FEC<AAAAMMJJ>.txt`, pour l'expert-comptable
  check   Contrôle la structure d'un FEC (art. A. 47 A-1 LPF). Un fichier se relit **sans coffre** ; `--period` dérive le FEC du coffre comme `export`, sans l'écrire. Ce n'est pas une attestation DGFiP
  help    Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `FREEFLOW_DB`
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
