crates/freeflow-cli/tests/snapshots/cli_integration__invoice_help_is_a_stable_interface_contract.snap
---
source: crates/freeflow-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Facturation : émission, avoir, vérification de la chaîne, balance âgée

Usage: freeflow invoice [OPTIONS] <COMMAND>

Commands:
  emit          Émet une facture — nécessite confirmation humaine quand `--actor agent:...`
  credit-note   Émet un avoir annulant intégralement une facture — même exigence de confirmation
  verify-chain  Revérifie la chaîne de hash de toutes les factures
  aged-balance  Balance âgée à une date donnée
  render        Rend une facture émise en PDF/A-3b avec le XML CII embarqué (Factur-X). Nécessite un profil d'entreprise défini (`freeflow company set-profile`)
  help          Print this message or the help of the given subcommand(s)

Options:
      --db <DB>        Chemin du coffre chiffré. Sinon, lu depuis `FREEFLOW_DB`
      --json           Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>  Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run        N'écrit rien : montre ce qui serait fait
      --no-color       Désactive la coloration (déjà minimale) de la sortie humaine
  -h, --help           Print help
